style.css
/* ... */
.radio, .checkbox { /* 713 */
padding-left: 18px;
}
.radio input[type="radio"],
.checkbox input[type="checkbox"] { /* 717 */
float: left;
margin-left: -18px;
}
input, textarea { /* 737 */
-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}
input:focus, textarea:focus { /* 748 */
border-color:#97A4C2;
outline: 0;
outline: thin dotted \9;
/* IE6-9 */
}
:-moz-placeholder { /* 960 */
color: #999999;
}
::-webkit-input-placeholder { /* 963 */
color: #999999;
}







/*-----------------------------------------------------------------------------------*/
/* Responsive design
/*-----------------------------------------------------------------------------------*/


/* Container, Standard case: */

#container {
overflow:hidden;
width:810px;
margin:auto;
margin-top:120px;
margin-bottom:50px;
}

/* Specifics when on Facebook */
body.facebook {
background-color:#FFFFFF;
}

body.facebook #container {
margin-top:0 !important;
margin-bottom:0 !important;
}

/* "Vertical responsive design" */
@media (max-height: 950px) {
    #container {
    margin-top:50px;
    }
}
@media (max-height: 820px) {
    #container {
    margin-top:25px;
    margin-bottom:15px;
    }
}

/* Responsive Design */
@media (max-width: 860px) {
    body.off-facebook #container {
    width:85%;
    margin-top:10px;
    }
    
    body.off-facebook .social {
    height:auto;
    }
    
    body.off-facebook input {
    max-width:200px;
    }
    
    body.off-facebook .order-column {
    width:auto;
    max-width:345px;
    }
}

@media (max-width: 500px) {
    body.off-facebook .profilePicThumb{margin-top:-150px}
}



/*-----------------------------------------------------------------------------------*/
/* External libraries
/*-----------------------------------------------------------------------------------*/

/*
 * jQuery FlexSlider v1.8
 * http://www.woothemes.com/flexslider/
 *
 * Copyright 2012 WooThemes
 * Free to use under the MIT license.
 * http://www.opensource.org/licenses/mit-license.php
 */

/* Browser Resets */
.flex-container a:active,
.flexslider a:active,
.flex-container a:focus,
.flexslider a:focus  {outline: none;}
.slides,
.flex-control-nav,
.flex-direction-nav {margin: 0; padding: 0; list-style: none;}

/* FlexSlider Necessary Styles
*********************************/
.flexslider {margin: 0; padding: 0;}
.flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
/* @Popshop: as our slides container has a fixed height, we could actually remove that. */
/* @Popshop: override responsiveness, so it doesn't break our UI too much when on small screens: */
/*.flexslider .slides img {max-width: 100%; display: block;}*/
.flex-pauseplay span {text-transform: capitalize;}

/* Clearfix for the .slides element */
.slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;}
html[xmlns] .slides {display: block;}
* html .slides {height: 1%;}

/* No JavaScript Fallback */
/* If you are not using another script, such as Modernizr, make sure you
 * include js that eliminates this class on page load */
.no-js .slides > li:first-child {display: block;}


/* FlexSlider Default Theme
*********************************/
.flexslider {/*background: #fff; border: 4px solid #fff;*/ position: relative; -webkit-border-radius: 5px; -moz-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; zoom: 1;}
.flexslider .slides {zoom: 1;}
.flexslider .slides > li {position: relative;}
/* Suggested container for "Slide" animation setups. Can replace this with your own, if you wish */
.flex-container {zoom: 1; position: relative;}

/* Caption style */
/* IE rgba() hack */
.flex-caption {background:none; -ms-filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000,endColorstr=#4C000000);
filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#4C000000,endColorstr=#4C000000); zoom: 1;}
.flex-caption {width: 96%; padding: 2%; margin: 0; position: absolute; left: 0; top: 0; background: rgba(0,0,0,.5); color: #fff; /*text-shadow: 0 -1px 0 rgba(0,0,0,.3);*/ font-size: 14px; line-height: 18px;}
/* @Popshop: */
.flex-caption {text-align:center;}
/* @Popshop: */
.flex-caption.light-caption { background: rgba(255, 255, 255, 0.60); color:#333; border-top: 1px solid rgba(59, 89, 153, 0.45); }
.flex-caption.right { width:265px; top:15px; right:15px; left: auto; }

/* Direction Nav */
/* @Popshop: Adapted from http://www.woothemes.com/flexslider/flexslider-demo/ */
.flex-direction-nav {*height: 0; padding: 0;} /*fix for IE 7 */
.flex-direction-nav li a {width: 26px; height: 26px; margin: -13px 0 0; display: block; background: url(images/bg_direction_nav.png) no-repeat; position: absolute; top: 50%; cursor: pointer; text-indent: -999em; opacity: 0.0; filter:alpha(opacity=0); }
.flexslider:hover .flex-direction-nav li a {opacity: 0.8; filter:alpha(opacity=80);}
.flex-direction-nav li a:hover  { opacity: 1 !important; filter:alpha(opacity=100) !important; }
.flex-direction-nav li .next {background-position: -30px 0; right: 8px;}
.flex-direction-nav li .prev {left: 8px;}
.flex-direction-nav li .disabled {opacity: .3; filter:alpha(opacity=30); cursor: default;}

/* Control Nav */
.flex-control-nav {width: 100%; position: absolute; bottom: 20px; text-align: center;}
.flex-control-nav li {margin: 0 0 0 5px; display: inline-block; zoom: 1; *display: inline;}
.flex-control-nav li:first-child {margin: 0;}

/*.flex-control-nav li a {width: 13px; height: 13px; display: block; background: url(images/bg_control_nav.png) no-repeat; cursor: pointer; text-indent: -999em;}
.flex-control-nav li a:hover {background-position: 0 -13px;}
.flex-control-nav li a.active {background-position: 0 -26px; cursor: default;}*/
/* ... */

